Changed index content

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     </div>
     <div id="tab-person" class="tab">
-        Ne dois pas s'afficher
+        Ne doit pas s'afficher
     </div>
     <div id="tab-success" class="tab">
-        Ne dois pas s'afficher
+        Ne doit pas s'afficher
     </div>
 </article>
 <script src="d3/d3.js"></script>
