--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 </article>
 <script src="d3/d3.js"></script>
-<script type="module" src="main.js"></script>
-<script type="module" src="modules/graphs/Graph.js"></script>
-<script type="module" src="modules/graphs/GraphExample.js"></script>
-<script type="module" src="modules/defaultOptions.js"></script>
+<script type="module" src="js/main.js"></script>
+<script type="module" src="js/modules/graphs/Graph.js"></script>
+<script type="module" src="js/modules/graphs/GraphExample.js"></script>
+<script type="module" src="js/modules/defaultOptions.js"></script>
 </body>
 </html>
