--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
 
-<nav>
-    <button id="btn-tab-wave">Wave</button>
-    <button id="btn-tab-person">Person</button>
-    <button id="btn-tab-success">Success</button>
-</nav>
+<svg id="menu">
+    <g id="menu-holder" transform="translate(100,100)"></g>
+</svg>
+
 <article>
     <div id="tab-wave" class="tab activeTab">
 
@@ -25,8 +24,10 @@
 </article>
 <script src="d3/d3.js"></script>
 <script type="module" src="js/main.js"></script>
+<script type="module" src="js/menu.js"></script>
 <script type="module" src="js/modules/graphs/Graph.js"></script>
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
+
 </body>
 </html>
