Added first implementation of a Parallel Coordinates + Brush

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/modules/graphs/Graph.js"></script>
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
+<script type="module" src="js/modules/graphs/ParallelCoordinates.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 </body>
 </html>
