Manon: RadarChart plotted but linked together

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 
-<svg id="menu">
-    <g id="menu-holder" transform="translate(100,100)"></g>
-</svg>
+<!--<svg id="menu">-->
+    <!--<g id="menu-holder" transform="translate(100,100)"></g>-->
+<!--</svg>-->
 
 <article>
-    <div id="tab-wave" class="tab activeTab">
-
-    </div>
-    <div id="tab-person" class="tab">
+    <div id="tab-wave" class="tab ">
         Ne doit pas s'afficher
+    </div>
+    <div id="tab-person" class="tab activeTab">
+
     </div>
     <div id="tab-success" class="tab">
         Ne doit pas s'afficher
