Manon: Preprocess for grouped bar chart

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <script type="module" src="js/modules/graphs/Graph.js"></script>
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
 <script type="module" src="js/modules/graphs/RadarChart.js"></script>
+<script type="module" src="js/modules/graphs/GroupedBarChart.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 
 </body>
