in progress GraphSuccessSecondaryFeature

--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
 
 <article>
     <div id="tab-wave" class="tab activeTab">
-
+        <select id="varDensityContinuous"></select>
+        <select id="varDensityCategorical"></select>
     </div>
     <div id="tab-person" class="tab">
         Ne doit pas s'afficher
     </div>
+
     <div id="tab-success" class="tab">
-        Ne doit pas s'afficher
+
     </div>
+
 </article>
 <script src="d3/d3.js"></script>
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/menu.js"></script>
 <script type="module" src="js/modules/graphs/Graph.js"></script>
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
+<script type="module" src="js/modules/graphs/GraphDensityVerticalLine.js"></script>
+<script type="module" src="js/modules/graphs/GraphSuccessSecondaryFeature.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 
 </body>
