Implemented interaction for middle lines

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 </nav>
 <article>
     <div id="tab-wave" class="tab activeTab">
+        <div class="options" id="options-wave">
+            <input type="checkbox" id="GG" checked>
+            <label for="GG">Green-Green</label>
+            <input type="checkbox" id="GR" checked>
+            <label for="GR">Green-Red</label>
+            <input type="checkbox" id="RG" checked>
+            <label for="RG">Red-Green</label>
+            <input type="checkbox" id="RR" checked>
+            <label for="RR">Red-Red</label>
+        </div>
 
+        <div id="graph-wave"></div>
     </div>
     <div id="tab-person" class="tab">
         Ne doit pas s'afficher
