first commit Yrieix scatter plot

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 
+
+
 <svg id="menu">
     <g id="menu-holder" transform="translate(100,100)"></g>
 </svg>
 
+<div id='scatter'></div>
 <article>
     <div id="tab-wave" class="tab activeTab">
 
@@ -26,7 +29,7 @@
 <script type="module" src="js/main.js"></script>
 <script type="module" src="js/menu.js"></script>
 <script type="module" src="js/modules/graphs/Graph.js"></script>
-<script type="module" src="js/modules/graphs/GraphExample.js"></script>
+<script type="module" src="js/modules/graphs/ScatterBubble.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 
 </body>
