Manon: beginning of checkbox radarchart

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         Ne doit pas s'afficher
     </div>
     <div id="tab-person" class="tab activeTab">
+        <!--<select id="attributesRadarChart"></select>-->
+        <div class="options" id="options-person">
+            <input type="checkbox" id="self_traits" checked>
+            <label for="self_traits">How you perceive yourself</label>
+            <input type="checkbox" id="rating_o" checked>
+            <label for="rating_o">How your dates perceived you</label>
+        </div>
 
     </div>
     <div id="tab-success" class="tab">
