--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
 <article>
     <div id="tab-wave" class="tab activeTab">
-        <select id="varDensityContinuous"></select>
-        <select id="varDensityCategorical"></select>
+        <select class="selectFeature" id="varDensityContinuous"></select>
+        <select class="selectFeature" id="varDensityCategorical"></select>
     </div>
+
     <div id="tab-person" class="tab">
         Ne doit pas s'afficher
     </div>
