--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
 <article>
     <div id="tab-wave" class="tab activeTab">
-        <select class="selectFeature" id="varDensityContinuous"></select>
-        <select class="selectFeature" id="varDensityCategorical"></select>
+        Wave
     </div>
 
     <div id="tab-person" class="tab">
-        Ne doit pas s'afficher
+        Person
     </div>
 
     <div id="tab-success" class="tab">
-
+        Sucess
+        <select class="selectFeature" id="varDensityContinuous"></select>
+        <select class="selectFeature" id="varDensityCategorical"></select>
     </div>
 
 </article>
