adding last version of the scatterbubble plot

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <g id="menu-holder" transform="translate(100,100)"></g>
 </svg>
 
-<div id='scatter'></div>
+
+
+
 <article>
     <div id="tab-wave" class="tab activeTab">
 
@@ -22,6 +24,11 @@
         Ne doit pas s'afficher
     </div>
     <div id="tab-success" class="tab">
+
+        <div id='scatter'>
+            <div id='scatter_plot'></div>
+        </div>
+
         Ne doit pas s'afficher
     </div>
 </article>
