--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <div id="tab-person" class="tab">
         Person
+        <select class="selectFeature" id="densityVarPerson1"></select>
+        <select class="selectFeature" id="densityVarPerson2"></select>
     </div>
 
     <div id="tab-success" class="tab">
