Home page + correction bugs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </svg>
 
 <article>
-    <div id="tab-wave" class="tab activeTab">
+    <div id="tab-home" class="tab activeTab">
+        Home
+        <h1>Speed Dating Data</h1>
+        <h2>Attractiveness, Sincerity, Intelligence, Hobbies</h2>
+    </div>
+
+    <div id="tab-wave" class="tab">
         Wave
     </div>
 
@@ -23,11 +29,10 @@
     </div>
 
     <div id="tab-success" class="tab">
-        Sucess
+        Success
         <select class="selectFeature" id="varDensityContinuous"></select>
         <select class="selectFeature" id="varDensityCategorical"></select>
     </div>
-
 </article>
 <script src="d3/d3.js"></script>
 <script type="module" src="js/main.js"></script>
