Started dashboard - columns list

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </nav>
 <article>
     <div id="tab-wave" class="tab activeTab">
+        <div id="options-columns">
+            <div id="list-col-wave">
+
+            </div>
+            <div id="list-sel-wave">
+
+            </div>
+        </div>
         <div class="options" id="options-wave">
             <input type="checkbox" id="GG" checked>
             <label for="GG">Green-Green</label>
@@ -25,7 +33,9 @@
             <label for="RR">Red-Red</label>
         </div>
 
-        <div id="graph-wave"></div>
+        <div id="graph-container-wave">
+            <div id="graph-wave"></div>
+        </div>
     </div>
     <div id="tab-person" class="tab">
         Ne doit pas s'afficher
