Scatter bubble plot ok, ready to merge

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </div>
     <div id="tab-success" class="tab">
 
+        <div id='success_primary_feature'></div>
+<!--         
         <div id='scatter'>
             <div id='scatter_plot'></div>
-        </div>
+        </div> -->
 
         Ne doit pas s'afficher
     </div>
