Cleaned navigation + CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Speed Dating Data</h1>
         <h2>Attractiveness, Sincerity, Intelligence, Hobbies</h2>
     </div>
-    <div id="tab-wave" class="tab activeTab">
+    <div id="tab-wave" class="tab">
         <div id="options-columns">
             <div id="list-col-wave">
 
