Added columns labels for PC

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </div>
     <div id="tab-wave" class="tab">
         <div id="options-columns">
+            <div id="label-col-wave">
+                Columns :
+            </div>
             <div id="list-col-wave">
 
             </div>
