Added wave selection in wave tab

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <div id="tab-wave" class="tab">
         <div id="options-columns">
             <div id="label-col-wave">
-                Columns :
+                Columns
             </div>
             <div id="list-col-wave">
-
+            </div>
+            <div id="label-sel-wave">
+                Selected columns
             </div>
             <div id="list-sel-wave">
-
             </div>
         </div>
         <div class="options" id="options-wave">
@@ -39,7 +40,9 @@
             <input type="checkbox" id="RR" checked>
             <label for="RR">Red-Red</label>
         </div>
-
+        <div id="select-wave">
+            <select class="select" id="nb-wave"></select>
+        </div>
         <div id="graph-container-wave">
             <div id="graph-wave"></div>
         </div>
