--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <label for="self_traits">How you perceive yourself</label> <br>
             <input type="checkbox" id="rating_o" checked>
             <label for="rating_o">How your dates perceived you</label> <br>
-            <input type="checkbox" id="self_look_traits">
+            <input type="checkbox" id="self_look_traits" checked>
             <label for="self_look_traits">What you look for in the opposite sex</label> <br>
-            <input type="checkbox" id="same_gender_look_traits">
+            <input type="checkbox" id="same_gender_look_traits" checked>
             <label for="same_gender_look_traits">What you think most of your fellow look for in the opposite sex</label> <br>
-            <input type="checkbox" id="opposite_gender_look_traits">
+            <input type="checkbox" id="opposite_gender_look_traits" checked>
             <label for="opposite_gender_look_traits">What you think the opposite sex looks for in a date</label> <br>
-            <input type="checkbox" id="opposite_gender_self_traits">
+            <input type="checkbox" id="opposite_gender_self_traits" checked>
             <label for="opposite_gender_self_traits">How you think others perceive you</label> <br>
         </div>
 
