Added images to PC

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             </div>
             <div id="list-col-wave">
             </div>
+        </div>
+        <div id="choice-columns">
             <div id="label-sel-wave">
                 Selected columns
             </div>
