cleanning graph chris

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             <div class="select-density">
                 <select class="selectFeature" id="densityVarPerson1"></select>
             </div>
-            <div class="graph-density">
+            <div class="graph-density" id="graphVarPersonContinuous">
             </div>
         </div>
         <div id="feat2-person" class="plot-density">
             <div class="select-density">
                 <select class="selectFeature" id="densityVarPerson2"></select>
             </div>
-            <div class="graph-density">
+            <div class="graph-density" id="graphVarPersonCategorical">
             </div>
         </div>
         <div id="id-person"></div>
@@ -83,14 +83,14 @@
             <div class="select-density">
                 <select class="selectFeature" id="varDensityContinuous"></select>
             </div>
-            <div class="graph-density">
+            <div class="graph-density" id="graphDensityContinuous">
             </div>
         </div>
         <div id="feat2-success" class="plot-density">
             <div class="select-density">
                 <select class="selectFeature" id="varDensityCategorical"></select>
             </div>
-            <div class="graph-density">
+            <div class="graph-density" id="graphDensityCategorical">
             </div>
         </div>
     </div>
@@ -103,7 +103,8 @@
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
 <script type="module" src="js/modules/graphs/ParallelCoordinates.js"></script>
 <script type="module" src="js/modules/graphs/GraphDensityVerticalLine.js"></script>
-<script type="module" src="js/modules/graphs/GraphSuccessSecondaryFeature.js"></script>
+<script type="module" src="js/modules/graphs/GraphDensityContinuous.js"></script>
+<script type="module" src="js/modules/graphs/GraphDensityCategorical.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 
 </body>
