--- a/index.html
+++ b/index.html
@@ -78,7 +78,16 @@
     <div id="tab-success" class="tab">
 
 
-        <div id="sbc-success"></div>
+        <div id="sbc-success">
+            <div id='sbc-success-plot'></div>
+            <div id='sbc-success-interaction-div'>
+                <div id='sbc-success-info'></div>
+                <div id='sbc-success-interaction'>
+                    <h3>Select first feature:</h3>
+                </div>
+            </div>
+        </div>
+
         <div id="feat1-success" class="plot-density">
             <div class="select-density">
                 <select class="selectFeature" id="varDensityContinuous"></select>
