divide graph by class and clean code

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <div id="rep-person"></div>
         <div id="feat1-person" class="plot-density">
             <div class="select-density">
-                <select class="selectFeature" id="densityVarPerson1"></select>
+                <select class="selectFeature" id="densityVarPersonContinuous"></select>
             </div>
             <div class="graph-density" id="graphVarPersonContinuous">
             </div>
         </div>
         <div id="feat2-person" class="plot-density">
             <div class="select-density">
-                <select class="selectFeature" id="densityVarPerson2"></select>
+                <select class="selectFeature" id="densityVarPersonCategorical"></select>
             </div>
             <div class="graph-density" id="graphVarPersonCategorical">
             </div>
@@ -76,8 +76,6 @@
     </div>
 
     <div id="tab-success" class="tab">
-
-
         <div id="sbc-success"></div>
         <div id="feat1-success" class="plot-density">
             <div class="select-density">
@@ -102,9 +100,10 @@
 <script type="module" src="js/modules/graphs/ScatterBubble.js"></script>
 <script type="module" src="js/modules/graphs/GraphExample.js"></script>
 <script type="module" src="js/modules/graphs/ParallelCoordinates.js"></script>
-<script type="module" src="js/modules/graphs/GraphDensityVerticalLine.js"></script>
 <script type="module" src="js/modules/graphs/GraphDensityContinuous.js"></script>
 <script type="module" src="js/modules/graphs/GraphDensityCategorical.js"></script>
+<script type="module" src="js/modules/graphs/GraphDensityVerticalLine.js"></script>
+<script type="module" src="js/modules/graphs/GraphDensityCategoricalPerson.js"></script>
 <script type="module" src="js/modules/defaultOptions.js"></script>
 
 </body>
