--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 </svg>
 
 
-
-
 <article>
     <div id="tab-home" class="tab activeTab">
         Home
@@ -52,20 +50,7 @@
     </div>
 
     <div id="tab-person" class="tab">
-      <div class="options" id="options-person">
-            <input type="checkbox" id="self_traits" checked>
-            <label for="self_traits">How you perceive yourself</label> <br>
-            <input type="checkbox" id="rating_o" checked>
-            <label for="rating_o">How your dates perceived you</label> <br>
-            <input type="checkbox" id="self_look_traits" >
-            <label for="self_look_traits">What you look for in the opposite sex</label> <br>
-            <input type="checkbox" id="same_gender_look_traits" >
-            <label for="same_gender_look_traits">What you think most of your fellow look for in the opposite sex</label> <br>
-            <input type="checkbox" id="opposite_gender_look_traits" >
-            <label for="opposite_gender_look_traits">What you think the opposite sex looks for in a date</label> <br>
-            <input type="checkbox" id="opposite_gender_self_traits" >
-            <label for="opposite_gender_self_traits">How you think others perceive you</label> <br>
-        </div>
+
         <div id="radar-person"></div>
         <div id="bar-person"></div>
         <div id="rep-person"></div>
@@ -83,7 +68,21 @@
             <div class="graph-density" id="graphVarPersonCategorical">
             </div>
         </div>
-        <div id="id-person"></div>
+        <div id="id-person">
+            <input type="checkbox" id="self_traits" checked>
+            <label for="self_traits">How you perceive yourself</label> <br>
+            <input type="checkbox" id="rating_o" checked>
+            <label for="rating_o">How your dates perceived you</label> <br>
+            <input type="checkbox" id="self_look_traits">
+            <label for="self_look_traits">What you look for in the opposite sex</label> <br>
+            <input type="checkbox" id="same_gender_look_traits">
+            <label for="same_gender_look_traits">What you think most of your fellow look for in the opposite sex</label>
+            <br>
+            <input type="checkbox" id="opposite_gender_look_traits">
+            <label for="opposite_gender_look_traits">What you think the opposite sex looks for in a date</label> <br>
+            <input type="checkbox" id="opposite_gender_self_traits">
+            <label for="opposite_gender_self_traits">How you think others perceive you</label> <br>
+        </div>
         <!--Person-->
     </div>
 
