--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <h2>Attractiveness, Sincerity, Intelligence, Hobbies</h2>
     </div>
     <div id="tab-wave" class="tab">
-        <div id="options-columns">
+        <div id="select-wave">
+            <span class="title">Wave</span>
+            <select class="select" id="nb-wave"></select>
+        </div>
+        <div id="options-columns-wave">
             <div id="label-col-wave">
                 Columns
             </div>
@@ -46,16 +50,16 @@
             <input type="checkbox" id="RR" checked>
             <label for="RR">Red-Red</label>
         </div>
-        <div id="select-wave">
-            <select class="select" id="nb-wave"></select>
-        </div>
         <div id="graph-container-wave">
             <div id="graph-wave"></div>
         </div>
     </div>
 
     <div id="tab-person" class="tab">
-
+        <div id="select-person">
+            <span class="title">Person</span>
+            <input type="number" placeholder="Person's iid" id="iid-person" min="1" max="552" value="1"></select>
+        </div>
         <div id="radar-person"></div>
         <div id="bar-person"></div>
         <div id="rep-person"></div>
@@ -92,7 +96,9 @@
     </div>
 
     <div id="tab-success" class="tab">
-
+        <div id="select-success">
+            <span class="title">Success</span>
+        </div>
         <div id="sbc-success">
             <div id='sbc-success-plot'></div>
             <div id='sbc-success-interaction-div'>
