Added update functions to grouped bar chart

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             <span class="title">Person</span>
             <input type="number" placeholder="Person's iid" id="iid-person" min="1" max="552" value="1"></select>
         </div>
-        <div id="radar-person"></div>
+        <div id="radar-person">
+            <div id="radar-person-container">
+
+            </div>
+        </div>
         <div id="bar-person"></div>
         <div id="rep-person"></div>
         <div id="feat1-person" class="plot-density">
