--- a/index.html
+++ b/index.html
@@ -93,19 +93,21 @@
         </div>
         <div id="bar-person"></div>
         <div id="id-person">
-            <div id="image-container"></div>
-            <ul>
-                <li>IID Number : <span class="li-id-card" id="li-iid"></span></li>
-                <li>ID Number : <span class="li-id-card" id="li-id"></span></li>
-                <li>Wave Number : <span class="li-id-card" id="li-wave"></span></li>
-                <li>Gender : <span class="li-id-card" id="li-gender"></span></li>
-                <li>Race : <span class="li-id-card" id="li-race"></span></li>
-                <li>From : <span class="li-id-card" id="li-from"></span></li>
-                <li>Field : <span class="li-id-card" id="li-field"></span></li>
-                <li>Career : <span class="li-id-card" id="li-career"></span></li>
-                <li>Income : <span class="li-id-card" id="li-income"></span></li>
-                <li>Goal : <span class="li-id-card" id="li-goal"></span></li>
-            </ul>
+            <div id="identity-card-person">
+                <div id="image-container"></div>
+                <ul>
+                    <li>IID Number : <span class="li-id-card" id="li-iid"></span></li>
+                    <li>ID Number : <span class="li-id-card" id="li-id"></span></li>
+                    <li>Wave Number : <span class="li-id-card" id="li-wave"></span></li>
+                    <li>Gender : <span class="li-id-card" id="li-gender"></span></li>
+                    <li>Race : <span class="li-id-card" id="li-race"></span></li>
+                    <li>From : <span class="li-id-card" id="li-from"></span></li>
+                    <li>Field : <span class="li-id-card" id="li-field"></span></li>
+                    <li>Career : <span class="li-id-card" id="li-career"></span></li>
+                    <li>Income : <span class="li-id-card" id="li-income"></span></li>
+                    <li>Goal : <span class="li-id-card" id="li-goal"></span></li>
+                </ul>
+            </div>
         </div>
         <div id="feat1-person" class="plot-density">
             <div class="select-density">
@@ -136,7 +138,6 @@
             <input type="checkbox" id="opposite_gender_self_traits">
             <label for="opposite_gender_self_traits">How you think others perceive you</label> <br>
         </div>
-        <!--Person-->
     </div>
 
     <div id="tab-success" class="tab">
