Added title + set left margin

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div id="bar-person"></div>
         <div id="id-person">
             <div id="identity-card-person">
+                <span class="id-card-title">Identity Card</span>
                 <div id="image-container"></div>
                 <ul>
                     <li>IID Number : <span class="li-id-card" id="li-iid"></span></li>
