--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <input type="number" placeholder="Person's iid" id="iid-person" min="1" max="552" value="1"></select>
         </div>
         <div id="radar-person">
-            <div id="radar-person-container">
-            </div>
+            <!--<div id="radar-person-container">-->
+            <!--</div>-->
         </div>
         <div id="bar-person"></div>
         <div id="id-person">
