Created a colorful menu

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <article>
     <div id="tab-home" class="tab activeTab">
-        Home
         <h1>Speed Dating Data</h1>
-        <h2>Attractiveness, Sincerity, Intelligence, Hobbies</h2>
+        <h2>by Christopher Belinguier, Manon Charvet, Yrieix Leprince, Rémi Sanchez, Thai-An Than Trong</h2>
     </div>
     <div id="tab-wave" class="tab">
         <div id="select-wave">
